fix: header border in dark mode

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -925,7 +925,7 @@
 
       // Header
       --sbb-header-lean-subtitle-color: var(--sbb-color-graphite);
-      --sbb-header-lean-border-bottom-color: var(--sbb-color-graphite);
+      --sbb-header-lean-border-bottom-color: var(--sbb-color-iron);
       --sbb-header-lean-background-color: var(--sbb-color-black);
 
       // Menu
